force-app/main/default/objects/PAN_Card__c/PAN_Card__c.object-meta.xml
<CustomObject>
    <label>PAN Card</label>
    <nameField>
        <label>PAN Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PAN Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>