force-app/main/default/objects/PAN_Card__c/fields/PAN_Card_Holder__c.field-meta.xml
<CustomField>
    <fullName>PAN_Card_Holder__c</fullName>
    <label>PAN Card Holder</label>
    <referenceTo>Candidate_Rasika__c</referenceTo>
    <relationshipLabel>PAN Cards</relationshipLabel>
    <relationshipName>PAN_Cards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>