force-app/main/default/objects/PAN_Card__c/fields/PAN_card_No__c.field-meta.xml
<CustomField>
    <fullName>PAN_card_No__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>PAN card No</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>